# scrapper

./: NotFound.csv  README.md  alert.py  help.py  main.py  pyproject.toml  python.json  scanned_barcodes.csv  scrapper.py  total.py  verified_barcodes.csv
