[tool.poetry]
name = "repl_python3_Python-Selenium-Tutorial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.0.0"
bs4 = "^0.0.1"
gspread = "^5.7.2"
gspread-dataframe = "^3.3.0"
oauth2client = "^4.1.3"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
